@@ -11,7 +11,7 @@ PKG_ADDON_NAME="SABnzbd"
 PKG_ADDON_TYPE="xbmc.service"
 PKG_ADDON_REQUIRES="service.locale:0.0.0"
 PKG_MAINTAINER="thoradia"
-PKG_REV="16"
+PKG_REV="17"
 PKG_SHORTDESC="$PKG_ADDON_NAME: free and easy binary newsreader"
 PKG_LONGDESC="$PKG_ADDON_NAME ($PKG_VERSION) is a program to download binary files from Usenet servers."
 PKG_DISCLAIMER="Keep it legal and carry on"
